--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -1,15 +1,17 @@
 <ul class="builder-control-list" data-control-list="<?= e($listName) ?>">
     <?php
-        foreach ($controls as $controlName=>$controlConfig):
-            $controlRenderingInfo = $this->getControlRenderingInfo($controlName, $controlConfig);
+        $prevConfig = null;
+        $prevSpan = null;
 
-        // Render other controls here. Each li should have:
-        // - data-inspectable
-        // - data-control-type
+        foreach ($controls as $controlName=>$controlConfig):
+            $controlRenderingInfo = $this->getControlRenderingInfo($controlName, $controlConfig, $prevConfig);
+
+            $prevSpan = $controlConfig['span'] = $controlRenderingInfo['span'];
+            $prevConfig = $controlConfig;
     ?>
         <li
-            class="span-left"
-            data-builder-span="<?= e($controlRenderingInfo['span']) ?>"
+            class="<?= e($controlRenderingInfo['spanClass']) ?>"
+            data-builder-span="<?= e($controlRenderingInfo['spanFixed']) ?>"
             data-inspectable="true"
             data-control-type="<?= e($controlRenderingInfo['type']) ?>"
             data-inspector-title="<?= e($controlRenderingInfo['title']) ?>"
@@ -23,7 +25,7 @@
     <?php endforeach ?>
 
     <li 
-        class="placeholder span-left"
+        class="placeholder <?= 'span-'.$this->getSpan('auto', $prevSpan) ?>"
         data-builder-span="auto"
         data-builder-placeholder="true"
         data-builder-loading-text="<?= e(trans('rainlab.builder::lang.form.loading')) ?>"
