Implementing form builder tabs, in progress.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -51,7 +51,7 @@ ul.builder-control-palette li i {
 .builder-building-area ul.builder-control-list:after {
   clear: both;
 }
-.builder-building-area ul.builder-control-list > li {
+.builder-building-area ul.builder-control-list > li.control {
   margin-bottom: 20px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -59,8 +59,8 @@ ul.builder-control-palette li i {
   -ms-user-select: none;
   user-select: none;
 }
-.builder-building-area ul.builder-control-list > li.placeholder,
-.builder-building-area ul.builder-control-list > li.loading-control {
+.builder-building-area ul.builder-control-list > li.control.placeholder,
+.builder-building-area ul.builder-control-list > li.control.loading-control {
   cursor: default;
   padding: 10px 12px;
   position: relative;
@@ -71,22 +71,22 @@ ul.builder-control-palette li i {
   border-radius: 4px;
   color: #dae0e0;
 }
-.builder-building-area ul.builder-control-list > li.placeholder i,
-.builder-building-area ul.builder-control-list > li.loading-control i {
+.builder-building-area ul.builder-control-list > li.control.placeholder i,
+.builder-building-area ul.builder-control-list > li.control.loading-control i {
   margin-right: 8px;
 }
-.builder-building-area ul.builder-control-list > li.placeholder {
+.builder-building-area ul.builder-control-list > li.control.placeholder {
   margin-top: 20px;
 }
-.builder-building-area ul.builder-control-list > li.clear-row {
+.builder-building-area ul.builder-control-list > li.control.clear-row {
   display: none;
   margin-bottom: 0;
 }
-.builder-building-area ul.builder-control-list > li.loading-control {
+.builder-building-area ul.builder-control-list > li.control.loading-control {
   border-color: #bdc3c7;
   text-align: left;
 }
-.builder-building-area ul.builder-control-list > li.loading-control:before {
+.builder-building-area ul.builder-control-list > li.control.loading-control:before {
   background-image: url(../../../../../modules/system/assets/ui/images/loader-transparent.svg);
   background-size: 15px 15px;
   background-position: 50% 50%;
@@ -100,31 +100,35 @@ ul.builder-control-palette li i {
   -webkit-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
 }
-.builder-building-area ul.builder-control-list > li.loading-control:after {
+.builder-building-area ul.builder-control-list > li.control.loading-control:after {
   content: attr(data-builder-loading-text);
   display: inline-block;
 }
-.builder-building-area ul.builder-control-list > li.drag-over {
+.builder-building-area ul.builder-control-list > li.control.drag-over {
   color: #2581b8;
   border-color: #2581b8;
 }
-.builder-building-area ul.builder-control-list > li.span-full {
+.builder-building-area ul.builder-control-list > li.control.span-full {
   width: 100%;
   float: left;
 }
-.builder-building-area ul.builder-control-list > li.span-left {
+.builder-building-area ul.builder-control-list > li.control.span-left {
   float: left;
   width: 48.5%;
   clear: left;
 }
-.builder-building-area ul.builder-control-list > li.span-right {
+.builder-building-area ul.builder-control-list > li.control.span-right {
   float: right;
   width: 48.5%;
   clear: right;
 }
-.builder-building-area ul.builder-control-list > li.span-right + li.clear-row {
+.builder-building-area ul.builder-control-list > li.control.span-right + li.clear-row {
   display: block;
   clear: both;
+}
+.builder-building-area ul.builder-control-list > li.control:not(.placeholder):not(.loading-control):hover *,
+.builder-building-area ul.builder-control-list > li.control.inspector-open:not(.placeholder):not(.loading-control) * {
+  color: #2581b8 !important;
 }
 .builder-building-area .builder-control-label {
   margin-bottom: 10px;
@@ -151,10 +155,6 @@ ul.builder-control-palette li i {
 .builder-building-area .builder-control-comment-below:empty {
   display: none;
 }
-.builder-building-area > li:not(.placeholder):not(.loading-control):hover *,
-.builder-building-area > li.inspector-open:not(.placeholder):not(.loading-control) * {
-  color: #2581b8 !important;
-}
 .builder-building-area .builder-blueprint-control-text {
   padding: 10px 12px;
   border: 2px solid #bdc3c7;
@@ -166,7 +166,7 @@ ul.builder-control-palette li i {
 .builder-building-area .builder-blueprint-control-text i {
   margin-right: 5px;
 }
-.builder-building-area li:hover .builder-blueprint-control-text,
+.builder-building-area li.control:hover .builder-blueprint-control-text,
 .builder-building-area li.inspector-open .builder-blueprint-control-text {
   border-color: #2581b8;
 }
@@ -189,7 +189,7 @@ ul.builder-control-palette li i {
 .builder-building-area .builder-blueprint-control-checkbox .builder-control-comment-below {
   margin-left: 25px;
 }
-.builder-building-area li:hover .builder-blueprint-control-checkbox:before,
+.builder-building-area li.control:hover .builder-blueprint-control-checkbox:before,
 .builder-building-area li.inspector-open .builder-blueprint-control-checkbox:before {
   border-color: #2581b8;
 }
@@ -226,32 +226,67 @@ ul.builder-control-palette li i {
 .builder-building-area .builder-blueprint-control-switch .builder-control-comment-below {
   margin-left: 45px;
 }
-.builder-building-area li:hover .builder-blueprint-control-switch:before,
+.builder-building-area li.control:hover .builder-blueprint-control-switch:before,
 .builder-building-area li.inspector-open .builder-blueprint-control-switch:before {
   background-color: #2581b8;
 }
 .builder-tabs > .tabs {
-  display: relative;
+  position: relative;
 }
-.builder-tabs > .tabs > ul {
+.builder-tabs > .tabs .tab-control {
+  position: absolute;
+  display: block;
+}
+.builder-tabs > .tabs .tab-control.inspector-trigger {
+  font-size: 14px;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+}
+.builder-tabs > .tabs .tab-control.inspector-trigger span {
+  display: block;
+  width: 3px;
+  height: 3px;
+  margin-bottom: 2px;
+  background: #95a5a6;
+}
+.builder-tabs > .tabs .tab-control.inspector-trigger span:last-child {
+  margin-bottom: 0;
+}
+.builder-tabs > .tabs .tab-control.inspector-trigger:hover span,
+.builder-tabs > .tabs .tab-control.inspector-trigger.inspector-open span {
+  background: #0181b9;
+}
+.builder-tabs > .tabs .tab-control.inspector-trigger.global {
+  top: 5px;
+  right: 15px;
+}
+.builder-tabs > .tabs > ul.tabs {
   padding: 0 20px 0 40px;
+  height: 31px;
   margin: 0;
   list-style: none;
   font-size: 0;
+  white-space: nowrap;
+  overflow: hidden;
   position: relative;
 }
-.builder-tabs > .tabs > ul:after {
+.builder-tabs > .tabs > ul.tabs:after {
   position: absolute;
   content: '';
   display: block;
   height: 2px;
   left: 0;
-  bottom: -2px;
+  bottom: 0;
   width: 100%;
   background: #bdc3c7;
   z-index: 106;
 }
-.builder-tabs > .tabs > ul > li {
+.builder-tabs > .tabs > ul.tabs > li {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   display: inline-block;
   font-size: 13px;
   white-space: nowrap;
@@ -261,25 +296,27 @@ ul.builder-control-palette li i {
   z-index: 105;
   cursor: pointer;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container {
   padding: 0 21px 0 21px;
   position: relative;
   height: 27px;
   color: #bdc3c7!important;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container > div {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container > div {
   padding: 4px 5px 0 5px;
-  -webkit-transition: padding 0.3s;
-  transition: padding 0.3s;
+  -webkit-transition: padding 0.1s;
+  transition: padding 0.1s;
   position: relative;
   border-top: 2px solid #e5e5e5;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container > div > span {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container > div > span {
   position: relative;
   top: -2px;
+  -webkit-transition: top 0.1s;
+  transition: top 0.1s;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container:before,
-.builder-tabs > .tabs > ul > li > div.tab-container:after {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container:before,
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container:after {
   content: '';
   display: block;
   position: absolute;
@@ -288,22 +325,21 @@ ul.builder-control-palette li i {
   width: 21px;
   background: transparent url(../images/tab.png) no-repeat;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container:before {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container:before {
   left: 0;
   background-position: 0 -27px;
 }
-.builder-tabs > .tabs > ul > li > div.tab-container:after {
+.builder-tabs > .tabs > ul.tabs > li > div.tab-container:after {
   right: 0;
   background-position: -75px -27px;
 }
-.builder-tabs > .tabs > ul > li:hover > div {
+.builder-tabs > .tabs > ul.tabs > li:hover > div {
   color: #95a5a6!important;
 }
-.builder-tabs > .tabs > ul > li .control {
-  position: absolute;
+.builder-tabs > .tabs > ul.tabs > li .tab-control {
   display: none;
 }
-.builder-tabs > .tabs > ul > li .control.close-btn {
+.builder-tabs > .tabs > ul.tabs > li .tab-control.close-btn {
   font-size: 15px;
   top: 9px;
   right: 18px;
@@ -314,50 +350,33 @@ ul.builder-control-palette li i {
   cursor: pointer;
   color: #95a5a6;
 }
-.builder-tabs > .tabs > ul > li .control.close-btn:hover {
+.builder-tabs > .tabs > ul.tabs > li .tab-control.close-btn:hover {
   color: #0181b9 !important;
 }
-.builder-tabs > .tabs > ul > li .control.tab-inspector-trigger {
+.builder-tabs > .tabs > ul.tabs > li .tab-control.inspector-trigger {
   right: 34px;
   top: 10px;
-  font-size: 14px;
-  padding-left: 5px;
-  padding-right: 5px;
-  cursor: pointer;
 }
-.builder-tabs > .tabs > ul > li .control.tab-inspector-trigger span {
-  display: block;
-  width: 3px;
-  height: 3px;
-  margin-bottom: 2px;
-  background: #95a5a6;
-}
-.builder-tabs > .tabs > ul > li .control.tab-inspector-trigger span:last-child {
-  margin-bottom: 0;
-}
-.builder-tabs > .tabs > ul > li .control.tab-inspector-trigger:hover span {
-  background: #0181b9;
-}
-.builder-tabs > .tabs > ul > li.active {
+.builder-tabs > .tabs > ul.tabs > li.active {
   z-index: 107;
 }
-.builder-tabs > .tabs > ul > li.active > div.tab-container {
+.builder-tabs > .tabs > ul.tabs > li.active > div.tab-container {
   color: #95a5a6!important;
 }
-.builder-tabs > .tabs > ul > li.active > div.tab-container:before {
+.builder-tabs > .tabs > ul.tabs > li.active > div.tab-container:before {
   background-position: 0 0;
 }
-.builder-tabs > .tabs > ul > li.active > div.tab-container:after {
+.builder-tabs > .tabs > ul.tabs > li.active > div.tab-container:after {
   background-position: -75px 0;
 }
-.builder-tabs > .tabs > ul > li.active > div.tab-container > div {
+.builder-tabs > .tabs > ul.tabs > li.active > div.tab-container > div {
   padding-right: 30px;
   border-top: 2px solid #bdc3c7;
 }
-.builder-tabs > .tabs > ul > li.active > div.tab-container > div > span {
+.builder-tabs > .tabs > ul.tabs > li.active > div.tab-container > div > span {
   top: 0;
 }
-.builder-tabs > .tabs > ul > li.active:before {
+.builder-tabs > .tabs > ul.tabs > li.active:before {
   position: absolute;
   content: '';
   display: block;
@@ -367,7 +386,30 @@ ul.builder-control-palette li i {
   width: 100%;
   background: white;
 }
-.builder-tabs > .tabs > ul > li.active .control {
+.builder-tabs > .tabs > ul.tabs > li.active .tab-control {
+  display: block;
+}
+.builder-tabs > .tabs > ul.tabs > li.new-tab {
+  background: transparent url(../images/tab.png) no-repeat;
+  background-position: -24px 0;
+  width: 27px;
+  height: 22px;
+  margin-left: -11px;
+  top: 4px;
+  position: relative;
+  cursor: pointer;
+}
+.builder-tabs > .tabs > ul.tabs > li.new-tab:hover {
+  background-position: -24px -32px;
+}
+.builder-tabs > .tabs > ul.panels {
+  padding: 0;
+  list-style: none;
+}
+.builder-tabs > .tabs > ul.panels > li {
+  display: none;
+}
+.builder-tabs > .tabs > ul.panels > li.active {
   display: block;
 }
 .control-filelist ul li.group.model > h4 a:after {
