--- a/assets/less/controlblueprint.less
+++ b/assets/less/controlblueprint.less
@@ -10,7 +10,7 @@
         }
     }
 
-    li:hover, li.inspector-open {
+    li.control:hover, li.inspector-open {
         .builder-blueprint-control-text {
             border-color: @builder-hover-color;
         }
@@ -38,7 +38,7 @@
         }
     }
 
-    li:hover, li.inspector-open {
+    li.control:hover, li.inspector-open {
         .builder-blueprint-control-checkbox:before {
             border-color: @builder-hover-color;
         }
@@ -82,7 +82,7 @@
         }
     }
 
-    li:hover, li.inspector-open {
+    li.control:hover, li.inspector-open {
         .builder-blueprint-control-switch:before {
             background-color: @builder-hover-color;
         }
