--- a/formwidgets/formbuilder/partials/_tabs.htm
+++ b/formwidgets/formbuilder/partials/_tabs.htm
@@ -1,69 +1,34 @@
 <div data-control-list-container class="builder-tabs <?= e($type) ?>">
-    <div class="tabs">
-        <ul>
+    <div class="tabs" data-tab-close-confirmation="<?= e(trans('rainlab.builder::lang.form.confirm_close_tab')) ?>">
+        <ul class="tabs">
 
-<li class="empty">
-    <div class="tab-container">
-        <div>
-            <span><?= e(trans('rainlab.builder::lang.form.empty_tab')) ?></span>
-        </div>
-    </div>
-
-    <div class="tab-inspector-trigger control">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
-    <div class="close-btn control">&times;</div>
-</li>
             <?php if (!$controls): ?>
-                <?= $this->makePartial('emptytab') ?>
+                <?= $this->makePartial('tab', ['active'=>true, 'title'=>trans('rainlab.builder::lang.form.empty_tab')]) ?>
             <?php endif ?>
 
-
-<li class="empty">
-    <div class="tab-container">
-        <div>
-            <span><?= e(trans('rainlab.builder::lang.form.empty_tab')) ?></span>
-        </div>
-    </div>
-
-    <div class="tab-inspector-trigger control">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
-    <div class="close-btn control">&times;</div>
-</li>
-
-<li class="empty">
-    <div class="tab-container">
-        <div>
-            <span><?= e(trans('rainlab.builder::lang.form.empty_tab')) ?></span>
-        </div>
-    </div>
-
-    <div class="tab-inspector-trigger control">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div>
-
-    <div class="close-btn control">&times;</div>
-</li>
-
-
-            <div class="controls">
-                <div>
-                    <i class="oc-icon-ellipsis-v"></i>
-                </div>
-            </div>
+            <li class="new-tab" data-builder-new-tab></li>
         </ul>
+
+        <ul class="panels">
+            <?php if (!$controls): ?>
+                <?= $this->makePartial('tabpanel', ['controls' => [], 'listName'=>$listName, 'active'=>true]) ?>
+            <?php endif ?>
+        </ul>
+
+        <div class="inspector-trigger tab-control global">
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
     </div>
 
     <script type="text/template" data-tab-template>
-        <?= $this->makePartial('emptytab') ?>
+        <?= $this->makePartial('tab', ['active'=>false, 'title'=>trans('rainlab.builder::lang.form.empty_tab')]) ?>
+    </script>
+
+    <script type="text/template" data-panel-template>
+        <?= $this->makePartial('tabpanel', ['controls' => [], 'listName'=>$listName, 'active'=>false]) ?>
     </script>
 </div>
