Implementing tabs in the Form Builder, in progress.

--- a/formwidgets/formbuilder/partials/_tabpanel.htm
+++ b/formwidgets/formbuilder/partials/_tabpanel.htm
@@ -1,4 +1,4 @@
-<li class="<?= $active ? 'active' : null ?>">
+<li class="tab-panel <?= $active ? 'active' : null ?>">
     <?= $this->makePartial('controllist', [
         'controls' => $controls, 
         'listName' => $listName
