--- a/formwidgets/formbuilder/partials/_controlcontainer.htm
+++ b/formwidgets/formbuilder/partials/_controlcontainer.htm
@@ -1,6 +1,6 @@
 <div class="builder-form-container" data-contol-container>
 
-    <!-- Some containers allow up to 3 lists - tabless fields, primary tabs, secondary tabs -->
+    <!-- Some containers allow up to 3 lists - tabless fieflds, primary tabs, secondary tabs -->
     <?= $this->makePartial('controllist', [
         'controls' => isset($fieldsConfiguration['fields']) ? $fieldsConfiguration['fields'] : [], 
         'listName' => ''
@@ -9,6 +9,8 @@
     <?= $this->makePartial('tabs', [
         'type' => 'primary',
         'controls' => [],
-        'listName' => 'tabs'
+        'listName' => 'tabs',
+        'tabsTitle' => trans('rainlab.builder::lang.form.tabs_primary'),
+        'configuration' => []
     ]) ?>
 </div>
