--- a/formwidgets/formbuilder/partials/_controlcontainer.htm
+++ b/formwidgets/formbuilder/partials/_controlcontainer.htm
@@ -1,5 +1,11 @@
 <div class="builder-form-container" data-contol-container>
 
+<?php
+
+    traceLog($fieldsConfiguration);
+
+?>
+
     <!-- Some containers allow up to 3 lists - tabless fieflds, primary tabs, secondary tabs -->
     <?= $this->makePartial('controllist', [
         'controls' => isset($fieldsConfiguration['fields']) ? $fieldsConfiguration['fields'] : [], 
@@ -8,9 +14,10 @@
 
     <?= $this->makePartial('tabs', [
         'type' => 'primary',
-        'controls' => [],
+        'controls' => $this->getTabsFields('tabs', $fieldsConfiguration),
         'listName' => 'tabs',
         'tabsTitle' => trans('rainlab.builder::lang.form.tabs_primary'),
-        'configuration' => []
+        'configuration' => [],
+        'tabNameTemplate' =>  trans('rainlab.builder::lang.form.tab_name_template'),
     ]) ?>
 </div>
