--- a/formwidgets/formbuilder/partials/_controllist.htm
+++ b/formwidgets/formbuilder/partials/_controllist.htm
@@ -25,7 +25,7 @@
     <?php endforeach ?>
 
     <li 
-        class="control placeholder <?= 'span-'.$this->getSpan('auto', $prevSpan) ?>"
+        class="control placeholder <?= 'span-'.$this->getSpan('auto', $prevSpan, true) ?>"
         data-builder-span="auto"
         data-builder-placeholder="true"
         data-builder-loading-text="<?= e(trans('rainlab.builder::lang.form.loading')) ?>"
