Allow square brackets in the form builder field names, properly handle parsing errors in YAML models, improved the placeholder visual appearance, generate field names automatically when they're dropped to a placeholder.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -65,7 +65,7 @@ ul.builder-control-palette li i {
   padding: 10px 12px;
   position: relative;
   text-align: center;
-  border: 2px solid #dde0e2;
+  border: 2px dotted #dde0e2;
   margin-top: 20px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
