--- a/assets/less/buildingarea.less
+++ b/assets/less/buildingarea.less
@@ -17,7 +17,7 @@
                 padding: 10px 12px;
                 position: relative;
                 text-align: center;
-                border: 2px solid #dde0e2;
+                border: 2px dotted #dde0e2;
                 margin-top: 20px;
                 .border-radius(4px);
                 color: #dae0e0;
