--- a/assets/less/builder.less
+++ b/assets/less/builder.less
@@ -32,6 +32,15 @@ html.gecko .control-filelist ul li.group {
     margin-right: 10px;
 }
 
+.builder-inspector-container {
+    width: 350px;
+    border-left: 1px solid #d9d9d9;
+
+    &:empty {
+        display: none!important;
+    }
+}
+
 // TODO: Move the aux tab styles to the tab.less
 
 .control-tabs {
